[tool.poetry]
name = "dbgpy"
version = "0.1.2"
description = "Python implementation of Rust's dbg! macro"
authors = ["Marcel Rød <marcelroed@gmail.com>"]
license = "MIT"
repository = "https://github.com/marcelroed/dbgpy"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3"
astunparse = {version = "^1", markers = "python_version<'3.9'"}

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
