[tool.poetry]
name = "dbgpy"
version = "0.1.6"
description = "Python implementation of Rust's dbg! macro"
authors = ["Marcel Rød <marcelroed@gmail.com>"]
license = "MIT"
repository = "https://github.com/marcelroed/dbgpy"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.5"
astunparse = {version = "^1", markers = "python_version<'3.9'"}
attrs = "^21.1"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
